Fix typo in OBP notebook

--- a/docs/guides/qiskit-addons-obp-get-started.ipynb
+++ b/docs/guides/qiskit-addons-obp-get-started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9dcb976-96bf-4016-976a-cb19ace0f526",
+   "id": "2d697463-4d74-4761-b1d7-da8cea7cc308",
    "metadata": {},
    "source": [
     "# Get started with OBP\n",
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "00f39aa3-60ee-47f1-8e3a-a110ca87c994",
+   "execution_count": 9,
+   "id": "5b4fd077-2d8f-46e8-9631-40cadbe07879",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "<Figure size 1959.72x869.556 with 1 Axes>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b9eba7-3e24-4a14-8cd0-0fe05678104e",
+   "id": "f6bcccef-263d-4cf2-81b3-141b99ffc860",
    "metadata": {},
    "source": [
     "### Prepare inputs to backpropagate\n",
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "67446f03-4ca7-480e-9b85-7bba97f05b57",
+   "execution_count": 10,
+   "id": "af6efa03-22bd-4aa4-b17e-3e3f87cd0584",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521c51fb-0fb9-41fb-850f-dd4f0d241c97",
+   "id": "10279a97-597d-44a0-b350-7a85cc58bf48",
    "metadata": {},
    "source": [
     "Once the slices have been generated, specify an `OperatorBudget` to provide the `backpropagate()` function with a condition to stop backpropagating the operator and prevent the classical overhead from growing further. You can also specify a truncation error budget for each slice wherein Pauli terms with small coefficients will be truncated from each slice until the error budget is filled. Any leftover budget will then be added to the following slice's budget.\n",
@@ -126,8 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "71ee4776-4d89-43d1-b73e-95932ae8c892",
+   "execution_count": 11,
+   "id": "5b853133-40e4-4549-9751-76cc03e87595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7cf0465-e079-4c95-b245-c72c64201ded",
+   "id": "5488b302-2df5-4715-9af1-19c615d215c6",
    "metadata": {},
    "source": [
     "### Backpropagate slices\n",
@@ -153,8 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3bd64d98-8650-4ad9-af19-539c19651dbf",
+   "execution_count": 12,
+   "id": "edb18b6e-8cca-4081-9909-baca7e82bf37",
    "metadata": {},
    "outputs": [
     {
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6dddb0ce-0cf2-4e13-abe0-0180e37ea091",
+   "execution_count": 13,
+   "id": "243681df-1234-4b83-9139-16b2b8c88308",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "<Figure size 1226x521.733 with 1 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4443fbef-9d2f-40ac-b465-6822d2a71bcc",
+   "id": "bf66b2c0-ecd5-4657-9962-2d6dae8c63c0",
    "metadata": {},
    "source": [
     "The below code snippets backpropagates the circuit *with* a truncation error budget."
@@ -236,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bc98019c-3985-4118-8a1e-06018fb0a522",
+   "execution_count": 14,
+   "id": "b1ea2012-21e2-4cb4-bc7f-f528bbb8a9cb",
    "metadata": {},
    "outputs": [
     {
@@ -281,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6a3d796b-3b4e-48c4-b416-98a4d72ce39d",
+   "execution_count": 15,
+   "id": "ab852775-229d-4652-9456-56c4dc8e628c",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "<Figure size 924.998x521.733 with 1 Axes>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fd7563b-a7c1-42f7-be00-c3f338197aa0",
+   "id": "aeb9995a-5530-4dbb-82f7-dca6abd798f0",
    "metadata": {},
    "source": [
     "### Transpile and execute quantum workload\n",
@@ -325,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "59f7344c-e6aa-4a44-9551-34be0e9bbcec",
+   "execution_count": 16,
+   "id": "a04ff4e3-4a8c-4844-bcac-c4557c7e24fe",
    "metadata": {},
    "outputs": [
     {
@@ -334,9 +334,9 @@
      "output_type": "stream",
      "text": [
       "Exact expectation value: 0.8854160687717517\n",
-      "Backpropagated expectation value without truncation: 0.8854160687717538\n",
+      "Backpropagated expectation value without truncation: 0.8854160687717509\n",
       "Backpropagated expectation value with truncation: 0.8850236647156042\n",
-      "    - Expected Error for truncated observable: 0.000e+00\n",
+      "    - Expected Error for truncated observable: 4.933e-02\n",
       "    - Observed Error for truncated observable: 3.924e-04\n"
      ]
     }
@@ -384,7 +384,7 @@
     "print(f\"Backpropagated expectation value without truncation: {result_bp}\")\n",
     "print(f\"Backpropagated expectation value with truncation: {result_bp_trunc}\")\n",
     "print(\n",
-    "    f\"    - Expected Error for truncated observable: {metadata.accumulated_error(0):.3e}\"\n",
+    "    f\"    - Expected Error for truncated observable: {metadata_trunc.accumulated_error(0):.3e}\"\n",
     ")\n",
     "print(\n",
     "    f\"    - Observed Error for truncated observable: {abs(result_exact - result_bp_trunc):.3e}\"\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31eb5da9-26cf-4b7d-b337-64ceeba6ca65",
+   "id": "bdccc683-0fc3-4ce2-975b-3ff495247c66",
    "metadata": {},
    "source": [
     "Lastly the following code snippet will transpile and execute the backpropagated circuit on a QPU (both with and without truncation)."
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "189b129b-17fd-44f7-9a39-2c52bf79c21b",
+   "id": "fb918a29-acb5-491a-8d7e-58fccd159a6a",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3683ab92-e145-4141-8932-311ec65318e3",
+   "id": "a56ecccf-d412-42bc-8bee-3a0e2f51ce2c",
    "metadata": {},
    "source": [
     "## Next steps\n",
