--- a/docs/guides/optimize-for-hardware.mdx
+++ b/docs/guides/optimize-for-hardware.mdx
@@ -61,6 +61,8 @@ can be run on IBM&reg; hardware using IBM Qiskit Runtime.
 - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
 - [QEDMA QESEM](/guides/qedma-qesem)
 
-### Qiskit Addons
+### Qiskit addons
+* [Approximate Quantum Compilation with Tensor Networks (AQC-Tensor)](./qiskit-addons-aqc)
+  * [Getting started with AQC-Tensor](./qiskit-addons-aqc-get-started)
 * [Operator Backpropagation (OBP)](./qiskit-addons-obp)
   * [Getting started with OBP](./qiskit-addons-obp-get-started)
