--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -24,7 +24,7 @@ The Qiskit Code Assistant model is available in  <DefinitionTooltip definition="
 
 Follow these steps to download the Qiskit Code Assistant GGUF model from the Hugging Face website:
 
-1. Navigate to the [`granite-8b-qiskit`](https://huggingface.co/qiskit) model page
+1. Navigate to the [`granite-8b-qiskit`](https://huggingface.co/Qiskit/granite-8b-qiskit-GGUF) model page
 1. Select the `granite-8b-qiskit` GGUF model version
 1. Go to the Files and Versions tab and download the GGUF model
 
@@ -55,7 +55,7 @@ To download the `granite-8b-qiskit` GGUF model using the Hugging Face CLI, follo
 
 ## Use the Qiskit Code Assistant model
 
-There are multiple ways to deploy and interact with the downloaded `granite-8b-qiskit` GGUF model. This guide demonstrates using [Ollama](https://ollama.com) as follows: either with the [Ollama application](#using-the-ollama-application), or with the [`llama-cpp-python` package](#using-the-llama-cpp-python-package).
+There are multiple ways to deploy and interact with the downloaded `granite-8b-qiskit` GGUF model. This guide demonstrates using [Ollama](https://ollama.com) as follows: either with the [Ollama application](#using-the-ollama-application) using the Hugging Face Hub integration or local model, or with the [`llama-cpp-python` package](#using-the-llama-cpp-python-package).
 
 ### Using the Ollama application
 
@@ -75,45 +75,46 @@ The Ollama application provides a simple solution to run the GGUF models locally
     ollama run granite3-dense:8b
     ```
 
+#### Set up Ollama using the Hugging Face Hub integration
+
+The [Ollama/Hugging Face Hub integration](https://huggingface.co/docs/hub/ollama) provides a way to interact with GGUF models hosted on the Hugging Face Hub without needing to create a new modelfile nor manually downloading the GGUF file. A default `template` and `params` files are already included for the GGUF model on the Hugging Face Hub.
+
+1. Make sure the Ollama application is running.
+
+1. Go the [`granite-8b-qiskit`](https://huggingface.co/Qiskit/granite-8b-qiskit-GGUF) GGUF model page, choose **ollama** from the **Use this model** dropdown.
+
+1. From your terminal, run the command:
+
+    ```
+    ollama run hf.co/Qiskit/granite-8b-qiskit-GGUF
+    ```
+
 #### Set up Ollama with the Qiskit Code Assistant GGUF model
+
+If you have manually downloaded the GGUF model and you want to experiment with different templates and parameters you can follow these steps to load it into your local Ollama application.
 
 1. Create a `Modelfile` entering the following content and be sure to update `<PATH-TO-GGUF-FILE>` to the actual path of your downloaded model.
 
     ```
     FROM <PATH-TO-GGUF-FILE>
-    TEMPLATE """{{ if .System }}System:
+    TEMPLATE """{{ if .System }}
+    System:
     {{ .System }}
 
-    {{ end }}
-    {{ if .Prompt }}Question:
+    {{ end }}{{ if .Prompt }}Question:
     {{ .Prompt }}
 
-    {{ end }}
-    Answer:
-    ```python
-    {{ .Response }}
+    {{ end }}Answer:
+    ```python{{ .Response }}
     """
 
-    SYSTEM """"""
+    PARAMETER stop "Question:"
+    PARAMETER stop "Answer:"
+    PARAMETER stop "System:"
+    PARAMETER stop "```"
 
-    PARAMETER stop "<fim_prefix>"
-    PARAMETER stop "<fim_middle>"
-    PARAMETER stop "<fim_suffix>"
-    PARAMETER stop "<fim_pad>"
-    PARAMETER stop "<|endoftext|>"
-
-    PARAMETER mirostat 0
-    PARAMETER mirostat_eta 0.1
-    PARAMETER mirostat_tau 5.0
-    PARAMETER num_ctx 10000
-    PARAMETER repeat_penalty 1.0
-    PARAMETER temperature 0.8
-    PARAMETER seed 0
-    PARAMETER tfs_z 1.0
-    PARAMETER num_predict 1024
-    PARAMETER top_k 50
-    PARAMETER top_p 0.95
-    PARAMETER min_p 0.05
+    PARAMETER temperature 0
+    PARAMETER top_k 1
     ```
 
 1. Run the following command to create a custom model instance based on the `Modelfile`.
