Tweaks to function template guide (#2302)
I am not able to push directly to the branch in #2300, so I opened this
instead.

--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -237,7 +237,7 @@
    "id": "939b9b9c-34b7-40a1-92fc-2b1639aee349",
    "metadata": {},
    "source": [
-    "When the function template is running, it is helpful to return information in the logs by using print statements, so that you can better evaluate the workload's progress. Following is a simple example of printing the `estimator_options` so  there is a record of the actual Estimator options used. There are many more similar example throughout the program to report progress during execution, including the value of the objective function during the iterative component of AQC-Tensor, and the two-qubit depth of the final instruction set architecture (ISA) circuit intended for execution on hardware."
+    "When the function template is running, it is helpful to return information in the logs by using print statements, so that you can better evaluate the workload's progress. Following is a simple example of printing the `estimator_options` so  there is a record of the actual Estimator options used. There are many more similar examples throughout the program to report progress during execution, including the value of the objective function during the iterative component of AQC-Tensor, and the two-qubit depth of the final instruction set architecture (ISA) circuit intended for execution on hardware."
    ]
   },
   {
@@ -652,7 +652,7 @@
    "source": [
     "#### Save the output\n",
     "\n",
-    "This function template returns the relevant domain-level output for this Hamiltonian simulation workflow (expectaton values) in addition to important metadata generated along the way."
+    "This function template returns the relevant domain-level output for this Hamiltonian simulation workflow (expectation values) in addition to important metadata generated along the way."
    ]
   },
   {
@@ -754,7 +754,7 @@
     "    dependencies=[\n",
     "        \"qiskit-addon-utils==0.1.0\",\n",
     "        \"qiskit-addon-aqc-tensor[quimb-jax]==0.1.0\",\n",
-    "        \"mergedeep\",\n",
+    "        \"mergedeep==1.3.4\",\n",
     "    ],\n",
     ")"
    ]
