--- a/docs/api/qiskit-addon-aqc-tensor/index.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/index.mdx
@@ -3,13 +3,13 @@ title: Approximate quantum compilation (AQC-Tensor) API documentation (latest ve
 description: Index of all the modules in the latest version of qiskit-addon-aqc-tensor.
 ---
 
-<span id="module-qiskit_addon_aqc_tensor" />
+<span id="qiskit-addon-aqc-tensor-api-reference" />
 
-<span id="aqctensor" />
+# `qiskit-addon-aqc-tensor` API Reference
 
-# AQC-Tensor API Reference
-
-*   [Ansatz Generation](ansatz-generation)
-*   [Objective Function](objective)
-*   [Tensor Network Simulation](simulation)
+*   [Ansatz generation (`qiskit_addon_aqc_tensor.ansatz_generation`)](ansatz-generation)
+*   [Objective function(s) (`qiskit_addon_aqc_tensor.objective`)](objective)
+*   [Tensor network simulation (`qiskit_addon_aqc_tensor.simulation`)](simulation)
+*   [Aer simulation backend (`qiskit_addon_aqc_tensor.simulation.aer`)](simulation-aer)
+*   [Quimb simulation backend (`qiskit_addon_aqc_tensor.simulation.quimb`)](simulation-quimb)
 
