--- a/docs/api/qiskit-addon-aqc-tensor/simulation-aer-qiskit-aer-mps.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/simulation-aer-qiskit-aer-mps.mdx
@@ -6,30 +6,32 @@ python_api_type: class
 python_api_name: qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS
 ---
 
-<span id="qiskit-addon-aqc-tensor-simulation-aer-qiskitaermps" />
+# QiskitAerMPS
 
-# qiskit\_addon\_aqc\_tensor.simulation.aer.QiskitAerMPS
+<Class id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/aer/state.py#L26-L44" signature="QiskitAerMPS(gamma, lamb)[source]" modifiers="class">
+  Bases: [`TensorNetworkState`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkState "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkState")
 
-<Class id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc_tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/aer/state.py#L26-L44" signature="QiskitAerMPS(gamma, lamb)[source]" modifiers="class">
   Qiskit Aer representation of a matrix-product state.
 
   This form of a matrix-product state was introduced in the original time-evolving block decimation (TEBD) paper, [https://arxiv.org/abs/quant-ph/0301063](https://arxiv.org/abs/quant-ph/0301063). See Sec. 7.3.2 of [https://arxiv.org/abs/1008.3477v2](https://arxiv.org/abs/1008.3477v2) for more details on the relationship with other MPS representations.
 
-  ### \_\_init\_\_
-
-  <Function id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS.__init__" signature="__init__(gamma, lamb)" />
-
-  ## Methods
-
-  |                                                                                                                                                         |   |
-  | ------------------------------------------------------------------------------------------------------------------------------------------------------- | - |
-  | [`__init__`](#qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS.__init__ "qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS.__init__")(gamma, lamb) |   |
-
   ## Attributes
 
-  |         |                                                                                |
-  | ------- | ------------------------------------------------------------------------------ |
-  | `gamma` | Gamma matrices (list of 2-tuples of ndarrays, one for each site).              |
-  | `lamb`  | Lambda matrices (list of ndarrays, one for each bond between adjacent qubits). |
+  **Parameters**
+
+  *   **gamma** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")*\[*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")*,* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")*]]*)
+  *   **lamb** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")*]*)
+
+  ### gamma
+
+  <Attribute id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS.gamma" attributeTypeHint="list[tuple[ndarray, ndarray]]">
+    Gamma matrices (list of 2-tuples of ndarrays, one for each site).
+  </Attribute>
+
+  ### lamb
+
+  <Attribute id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerMPS.lamb" attributeTypeHint="list[ndarray]">
+    Lambda matrices (list of ndarrays, one for each bond between adjacent qubits).
+  </Attribute>
 </Class>
 
