--- a/docs/api/qiskit-addon-aqc-tensor/simulation-aer-qiskit-aer-simulation-settings.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/simulation-aer-qiskit-aer-simulation-settings.mdx
@@ -6,11 +6,11 @@ python_api_type: class
 python_api_name: qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings
 ---
 
-<span id="qiskit-addon-aqc-tensor-simulation-aer-qiskitaersimulationsettings" />
+# QiskitAerSimulationSettings
 
-# qiskit\_addon\_aqc\_tensor.simulation.aer.QiskitAerSimulationSettings
+<Class id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/aer/simulation.py#L59-L92" signature="QiskitAerSimulationSettings(simulator, callback=None)[source]" modifiers="class">
+  Bases: [`TensorNetworkSimulationSettings`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkSimulationSettings "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkSimulationSettings")
 
-<Class id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc_tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/aer/simulation.py#L59-L92" signature="QiskitAerSimulationSettings(simulator, callback=None)[source]" modifiers="class">
   Qiskit Aer simulator settings.
 
   Example usage:
@@ -36,21 +36,23 @@ python_api_name: qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSetti
 
   See additional options for when using the `matrix_product_state` simulation method in the documentation for [`AerSimulator`](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html#qiskit_aer.AerSimulator "(in Qiskit Aer v0.15.0)").
 
-  ### \_\_init\_\_
-
-  <Function id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings.__init__" signature="__init__(simulator, callback=None)" />
-
-  ## Methods
-
-  |                                                                                                                                                                                                  |   |
-  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | - |
-  | [`__init__`](#qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings.__init__ "qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings.__init__")(simulator\[, callback]) |   |
-
   ## Attributes
 
-  |             |                                                                                                                    |
-  | ----------- | ------------------------------------------------------------------------------------------------------------------ |
-  | `callback`  | This callable, if provided, is called with `(circuit, result)` as arguments immediately after each MPS simulation. |
-  | `simulator` | Aer simulator, must be configured with method='matrix\_product\_state'.                                            |
+  **Parameters**
+
+  *   **simulator** (*AerSimulator*)
+  *   **callback** (*Callable\[\[QuantumCircuit, Result], None] | None*)
+
+  ### callback
+
+  <Attribute id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings.callback" attributeTypeHint="Callable[[QuantumCircuit, Result], None] | None" attributeValue="None">
+    This callable, if provided, is called with `(circuit, result)` as arguments immediately after each MPS simulation.
+  </Attribute>
+
+  ### simulator
+
+  <Attribute id="qiskit_addon_aqc_tensor.simulation.aer.QiskitAerSimulationSettings.simulator" attributeTypeHint="AerSimulator">
+    Aer simulator, must be configured with method=’matrix\_product\_state’. Stores configuration like `max_bond_dimension`, `truncation_threshold`, etc.
+  </Attribute>
 </Class>
 
