--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -9,6 +9,10 @@
    "source": [
     "# QURI Chemistry - a Qiskit Function by QunaSys\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "This function helps you solve the quantum chemistry ground state estimation problem by using one of two algorithms based on the [Quantum Selected Configuration Interaction (QSCI) algorithm](https://arxiv.org/pdf/2302.11320):\n",
