--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -850,6 +850,7 @@
   }
  ],
  "metadata": {
+  "description": "This Qiskit Function for quantum chemistry calculation uses the QSCI algorithm and provides ground state energy estimation.",
   "kernelspec": {
    "display_name": "qiskit_function",
    "language": "python",
@@ -865,7 +866,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.19",
+   "title": "QURI Chemistry - A Qiskit Function by QunaSys"
   }
  },
  "nbformat": 4,
