--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -929,7 +929,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "QURI Chemistry - A Qiskit Function by QunaSys"
  },
  "nbformat": 4,
  "nbformat_minor": 2
