Fixing install instructions

--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -30,7 +30,7 @@ To use the AI transpiler passes, first [install the `qiskit-ibm-transpiler` pack
 If you want to use the AI-powered transpiler passes in your local environment for free you need install `qiskit-ibm-transpiler` with some extra dependencies as follows:
 
 ```sh
-pip install qiskit-ibm-transpiler["ai-local-mode"]
+pip install qiskit-ibm-transpiler[ai-local-mode]
 ```
 
 Without these extra dependencies, the AI-powered transpiler passes run on the cloud through the Qiskit Transpiler Service (available only for IBM Quantum&trade; Premium Plan users). After installing the extra dependencies, the default mode to run the AI-powered transpiler passes is to use your local machine.
