--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -27,7 +27,7 @@ To use the AI transpiler passes, first [install the `qiskit-ibm-transpiler` pack
 
 ## Run the AI transpiler passes locally or on the cloud
 
-If you want to use the AI-powered transpiler passes in your local environment for free you need install `qiskit-ibm-transpiler` with some extra dependencies as follows:
+If you want to use the AI-powered transpiler passes in your local environment for free, install `qiskit-ibm-transpiler` with some extra dependencies as follows:
 
 ```sh
 pip install qiskit-ibm-transpiler[ai-local-mode]
