--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -140,7 +140,7 @@ The following options are used in this example:
 * `coupling_map` - Specifies which coupling map to use for the transpilation.
 * `ai_optimization_level` - Specifies the level of optimization (1-3) to use for the AI components of the PassManager.
 * `optimization_level` - Specifies how much optimization to perform on the circuit for the heuristic components of the PassManager.
-* `ai_layout_mode` - Specifies how the AI routing part of the PassManager handles the layout. Refer to the #AI-routing-pass section to review the configuration options for this `ai_layout_mode` parameter.
+* `ai_layout_mode` - Specifies how the AI routing part of the PassManager handles the layout. Refer to the [AI routing pass](#ai-routing-pass) section to review the configuration options for this `ai_layout_mode` parameter.
 
 ## Limits
 
