--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -12,7 +12,7 @@ The Qiskit Transpiler Service provides transpilation capabilities on the cloud. 
 The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows.
 
 <Admonition type="note">
-    This service is only available for IBM Quantum&trade Premium Plan users.
+    This service is only available for IBM Quantum Premium Plan users.
     The service is a beta release, subject to change.
     If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.slack.com/archives/C06KF8YHUAU).
 </Admonition>
