--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectCliffords.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectCliffords.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
 # CollectCliffords
 
-<Class id="qiskit_ibm_transpiler.ai.CollectCliffords" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.7/qiskit_ibm_transpiler/ai/collection.py#L223-L260" signature="qiskit_ibm_transpiler.ai.CollectCliffords(do_commutative_analysis: bool = True, min_block_size: int = 2, max_block_size: int = CLIFFORD_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectCliffords" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/collection.py#L261-L298" signature="qiskit_ibm_transpiler.ai.CollectCliffords(do_commutative_analysis: bool = True, min_block_size: int = 2, max_block_size: int = CLIFFORD_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
   Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.
@@ -55,7 +55,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.run" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/collection.py#L234-L258" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
