--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -1991,6 +1991,18 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339e2cea-b297-4191-badd-1f406ee7b21d",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Read through the [SQD tutorial](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd) on IBM Quantum Learning\n",
+    "</Admonition>"
+   ]
   }
  ],
  "metadata": {
