Remove license and restore next steps

--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -891,34 +891,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dafc0d40-b513-41d1-b85b-a9798ef52467",
+   "id": "d8837936-35d9-492a-b384-d3523f3f62c0",
    "metadata": {},
    "source": [
     "## Support\n",
     "\n",
-    "For running systems larger than 20 qubits, please contact sales@qunasys.com"
+    "For running systems larger than 20 qubits, please contact [sales@qunasys.com](mailto:sales@qunasys.com)."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eaf5aafc-c05a-4f7a-aa2e-e80af34fcd3c",
-   "metadata": {},
-   "source": [
-    "## License\n",
-    "\n",
-    "Include link to license."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b2f9ce0-4748-40dc-887d-5c11eca64039",
-   "metadata": {},
-   "source": [
-    "## Next steps\n",
-    "\n",
-    "[Links to relevant tutorials]"
-   ]
-  }
+    "cell_type": "markdown",
+    "id": "c71a13cd-b0a1-4a6a-8c00-fbb8d4ecd507",
+    "metadata": {},
+    "source": [
+     "## Next steps\n",
+     "\n",
+     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+     "\n",
+     "- [Request access to QunaSys QURI Chemistry](https://quantum.ibm.com/functions?id=42f5a0ea-2c74-4681-a973-3ef97de97ee4)\n",
+     "- Try the [Compute dissociation curves for strong coupling systems with QunaSys QURI Chemistry](https://learning.quantum.ibm.com/tutorial/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci) tutorial.\n",
+     "\n",
+     "</Admonition>"
+    ]
+   }
  ],
  "metadata": {
   "description": "This Qiskit Function for quantum chemistry calculation uses the QSCI algorithm and provides ground state energy estimation.",
