--- a/docs/api/qiskit-addon-sqd/release-notes.mdx
+++ b/docs/api/qiskit-addon-sqd/release-notes.mdx
@@ -10,6 +10,16 @@ in_page_toc_max_heading_level: 2
 
 # Sample-based quantum diagonalization (SQD) release notes
 
+<span id="release-notes-upcoming-release" />
+
+## Upcoming release
+
+<span id="release-notes-upcoming-release-bug-fixes" />
+
+### Bug Fixes
+
+*   pyscf is no longer considered a dependency on Windows, where it fails to install. However, Windows remains an unsupported platform.
+
 <span id="release-notes-0-8-0" />
 
 <span id="id2" />
@@ -38,6 +48,8 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-7-0-bug-fixes" />
 
+<span id="id4" />
+
 ### Bug Fixes
 
 *   Fixed a bug in [`qiskit_addon_sqd.fermion.solve_fermion()`](fermion#solve_fermion "qiskit_addon_sqd.fermion.solve_fermion") and [`qiskit_addon_sqd.fermion.optimize_orbitals()`](fermion#optimize_orbitals "qiskit_addon_sqd.fermion.optimize_orbitals") which causes the determinants for spin-up and spin-down to be incorrectly flipped before solving.
@@ -46,13 +58,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-6-0" />
 
-<span id="id4" />
+<span id="id5" />
 
 ## 0.6.0
 
 <span id="release-notes-0-6-0-upgrade-notes" />
 
-<span id="id5" />
+<span id="id6" />
 
 ### Upgrade Notes
 
@@ -130,7 +142,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-6-0-bug-fixes" />
 
-<span id="id6" />
+<span id="id7" />
 
 ### Bug Fixes
 
@@ -140,13 +152,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-5-0" />
 
-<span id="id7" />
+<span id="id8" />
 
 ## 0.5.0
 
 <span id="release-notes-0-5-0-upgrade-notes" />
 
-<span id="id8" />
+<span id="id9" />
 
 ### Upgrade Notes
 
@@ -204,7 +216,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-4-0" />
 
-<span id="id9" />
+<span id="id10" />
 
 ## 0.4.0
 
@@ -216,7 +228,7 @@ This is a minor release which introduces a couple of small, but important, break
 
 <span id="release-notes-0-4-0-upgrade-notes" />
 
-<span id="id10" />
+<span id="id11" />
 
 ### Upgrade Notes
 
