Add QDC blog to latest updates page

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 22 October 2024*
+*Last updated 14 November 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -126,17 +126,17 @@ Users can purchase licenses for the following functions contributed by our partn
 To get started, explore the [Qiskit Functions documentation](/guides/functions).
 
 
-## IBM Quantum blog: A closer look at Qiskit Code Assistant
+## IBM Quantum blog: IBM Quantum delivers on performance challenge
 
 *Browse all blogs at the [IBM Quantum blog page](https://www.ibm.com/quantum/blog).*
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-We recently made Qiskit Code Assistant [available as a preview release](/announcements/product-updates/2024-09-16-code-assistant) for IBM Quantum Premium Plan users. In our latest post on the IBM Quantum blog, we take a look at the inner workings of the `granite-8b-qiskit` model behind this powerful new quantum code generation tool, and the unique challenges that went into building it.
+Two years ago, IBM set a challenge for both itself and the quantum community. We asked quantum researchers to work on developing quantum algorithms incorporating circuits with 100 qubits and gate depths of 100. In exchange, we would build a quantum computer capable of returning accurate values for those circuits in less than a day’s runtime.
 
-The blog opens with a high-level overview of our motivations for building Qiskit Code Assistant, long-term plans for open-sourcing the code assistant model, and instructions for getting started with Qiskit Code Assistant in popular coding environments VS Code and JupyterLab. A more detailed version of these instructions can be found in the [documentation](/guides/qiskit-code-assistant).
+On 11 November 2024, at the first-ever IBM Quantum Developer Conference (QDC), IBM announced the fulfillment of that promise: a quantum computer capable of running quantum circuits with up to 5,000 two-qubit gate operations.
 
-From there, the blog goes on to deliver popular summaries of two recent arXiv papers detailing our work developing the `granite-8b-qiskit` model, and the Qiskit HumanEval benchmarking method we use to evaluate the performance of quantum code generation tools. Interested readers can [explore the blog](https://www.ibm.com/quantum/blog/qiskit-code-assistant), and those looking for more technical detail can find the aforementioned arXiv papers [here](https://arxiv.org/abs/2405.19495/) and [here](https://arxiv.org/pdf/2406.14712).
+On the IBM Quantum blog, we take a deep dive into the many hardware advances, software innovations, and research partnerships that have made this achievement possible, and offer a preview of what's coming next. Visit the [blog](https://www.ibm.com/quantum/blog/qdc-2024) to learn more.
 
 ## What's new in the documentation
 
