add to functions intro page

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -73,7 +73,36 @@
    "id": "42843fcd-1779-4a74-8d6a-7d00c22e374e",
    "metadata": {},
    "source": [
-    "Optionally, you can use the `save_account()` method to save your credentials for easy access later on, before initializing the service. This saves your credentials in the same place as `QiskitRuntimeService.save_account()`, so you can skip this step if you had previously used `QiskitRuntimeService` to save your account. *Note that account credentials are saved in plain text, so only do so if you are using a trusted device.*"
+    "Optionally, you can use the `save_account()` method to save your credentials for easy access later on, before initializing the service. This saves your credentials in the same place as `QiskitRuntimeService.save_account()`, so you can skip this step if you had previously used `QiskitRuntimeService` to save your account. *Note that account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; click the following collapsible section for more information.*\n",
+    "\n",
+    "<details>\n",
+    "    <summary>\n",
+    "    Securely manage your token with an environment variable\n",
+    "    </summary>\n",
+    "    To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. Here’s how to modify your code to load the API token from an environment variable.\n",
+    "\n",
+    "    1. Set the environment variable:\n",
+    "\n",
+    "    Set the `IQP_API_TOKEN` environment variable in your system. You can do this by adding the following line to your shell profile (for example, `.bashrc`, `.zshrc`) or by setting it directly in your terminal:\n",
+    "\n",
+    "    ```bash\n",
+    "    export IQP_API_TOKEN=\"<YOUR_IQP_API_TOKEN>\"\n",
+    "    ```\n",
+    "\n",
+    "    2. Modify the code to retrieve the token from the environment variable\n",
+    "\n",
+    "    Update your code to retrieve the token from the environment variable instead of saving it directly:\n",
+    "\n",
+    "    ```python\n",
+    "    import os\n",
+    "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "\n",
+    "    # Gather the token from your environment\n",
+    "    iqp_api_token = os.getenv(\"IQP_API_TOKEN\")\n",
+    "\n",
+    "    QiskitFunctionsCatalog.save_account(token=iqp_api_token)\n",
+    "    ``` \n",
+    "</details>"
    ]
   },
   {
