--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -245,7 +245,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 <span id="securely-manage"></span>
 ## Securely manage your token
 
-To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. Here’s how to modify your code to load the API token from an environment variable.
+To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. The following demonstrates how to modify your code to load the API token from an environment variable.
 
 1. Set the environment variable.
 
