Preview Sphinx enhancements for qiskit-ibm-transpiler

--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
@@ -24,6 +24,8 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
   *   **ai\_layout\_mode** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*, optional*) – Specifies how to handle the layout selection. There are 3 layout modes: keep (respects the layout set by the previous transpiler passes), improve (uses the layout set by the previous transpiler passes as a starting point) and optimize (ignores previous layout selections).
   *   **use\_fractional\_gates** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) –
 
+  Initializes the instance.
+
   ## Methods
 
   ### run
