Turn off signatures in tables

--- a/docs/api/qiskit-ibm-runtime/debug_tools.mdx
+++ b/docs/api/qiskit-ibm-runtime/debug_tools.mdx
@@ -18,9 +18,9 @@ The tools for debugging and analyzing qiskit-ibm-runtime jobs.
 
 ## Classes
 
-|                                                                                                                      |                                                                                                                                                  |
-| -------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [`Neat`](qiskit_ibm_runtime.debug_tools.Neat "qiskit_ibm_runtime.debug_tools.Neat")(backend\[, noise\_model])        | A class to help understand the expected performance of estimator jobs.                                                                           |
-| [`NeatResult`](qiskit_ibm_runtime.debug_tools.NeatResult "qiskit_ibm_runtime.debug_tools.NeatResult")(pub\_results)  | A container for multiple [`NeatPubResult`](qiskit_ibm_runtime.debug_tools.NeatPubResult "qiskit_ibm_runtime.debug_tools.NeatPubResult") objects. |
-| [`NeatPubResult`](qiskit_ibm_runtime.debug_tools.NeatPubResult "qiskit_ibm_runtime.debug_tools.NeatPubResult")(vals) | A class to store the PUB results of `Neat`.                                                                                                      |
+|                                                                                                                |                                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [`Neat`](qiskit_ibm_runtime.debug_tools.Neat "qiskit_ibm_runtime.debug_tools.Neat")                            | A class to help understand the expected performance of estimator jobs.                                                                           |
+| [`NeatResult`](qiskit_ibm_runtime.debug_tools.NeatResult "qiskit_ibm_runtime.debug_tools.NeatResult")          | A container for multiple [`NeatPubResult`](qiskit_ibm_runtime.debug_tools.NeatPubResult "qiskit_ibm_runtime.debug_tools.NeatPubResult") objects. |
+| [`NeatPubResult`](qiskit_ibm_runtime.debug_tools.NeatPubResult "qiskit_ibm_runtime.debug_tools.NeatPubResult") | A class to store the PUB results of `Neat`.                                                                                                      |
 
