--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -1080,7 +1080,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Write your first Qiskit Serverless program"
+  "title": "Build a Function template for Hamiltonian simulation"
  },
  "nbformat": 4,
  "nbformat_minor": 4
